--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Helios by HTML5 UP</title>
+		<title>MAdS Lab news</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="index.html" id="logo">MAdS Lab</a></h1>
 							</header>
 						</div>
 
@@ -47,9 +47,11 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="team.html">Team</a></li>
+								<li><a href="research.html">Research</a></li>
+								<li><a href="news.html">News</a></li>
+								<li><a href="publications.html">Publications</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 
@@ -61,7 +63,7 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2><a href="#">No Sidebar</a></h2>
+								<h2><a href="#">News</a></h2>
 								<p>
 									Morbi convallis lectus malesuada sed fermentum dolore amet
 								</p>
